fix: fix person object parsing logic
